# Fixed_Point_API

./: CMakeLists.txt  README.md
Tests/: Fixed_Point_API.cpp  Fixed_Point_Tests.hpp  Fixed_Point_Tests.hxx
examples/: FP_S_examples.cpp  FP_S_global_functioning.cpp
src/: FP_S_examples.cpp  Fixed_Point_API.cpp  Fixed_Point_Tests.hpp  Fixed_Point_Tests.hxx
src/Fixed_Point/: Fixed_Point_Dynamic.hpp  Fixed_Point_Dynamic_extra.hpp  Fixed_Point_Static.hpp  Fixed_Point_Static.hxx  Fixed_Point_Static_extra.hpp  Fixed_Point_Static_operators.hpp  Fixed_Point_Static_operators.hxx  Fixed_Point_Utils.hpp  Fixed_Point_utils.hpp  Fixed_Point_utils.hxx
